# hd_sdk3.0_client

./: .gitignore  CMakeLists.txt  HDSDK.def  HDSDK.lib  README.md  main.cpp
